--- a/package.json
+++ b/package.json
@@ -13,5 +13,9 @@
     "nuxt": "^3.14.1592",
     "vue": "latest",
     "vue-router": "latest"
+  },
+  "devDependencies": {
+    "less": "^4.2.1",
+    "less-loader": "^12.2.0"
   }
 }
