--- a/package.json
+++ b/package.json
@@ -15,7 +15,10 @@
     "vue-router": "latest"
   },
   "devDependencies": {
+    "@fullhuman/postcss-purgecss": "^7.0.2",
+    "autoprefixer": "^10.4.20",
     "less": "^4.2.1",
-    "less-loader": "^12.2.0"
+    "less-loader": "^12.2.0",
+    "postcss": "^8.4.49"
   }
 }
